objects/Box_Platform_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_User_Id__c</fullName>
        <label>Default User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Id__c</fullName>
        <label>Enterprise Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <label>Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Key_Id__c</fullName>
        <label>Public Key Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webhook_Primary_Key__c</fullName>
        <label>Webhook Primary Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webhook_Secondary_Key__c</fullName>
        <label>Webhook Secondary Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Box Platform Setting</label>
    <pluralLabel>Box Platform Settings</pluralLabel>
</CustomObject>